navigation and routing - start

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="On-line shop with interesting beers"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
     <title>Lord of the Beers</title>
   </head>
   <body>
